interpreter/tests/test-modules/fatal.enzo
//= Invalid parenthesis/brackets/braces
(1 + 2                 // error: unmatched parenthesis
(1 + 2;                 // error: unmatched parenthesis
[1, 2, 3              // error: unmatched bracket
[1, 2, 3;              // error: unmatched bracket
[ $a: 1, $b: 2         // error: unmatched bracket
[ $a: 1, $b: 2;         // error: unmatched bracket
